--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/spring8
 spring.datasource.username=root
 spring.datasource.password=123456789
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
@@ -12,8 +12,9 @@ server.error.include-message=always
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username= mstfjafarzadeh@gmail.com
-spring.mail.password= m121314121314
+spring.mail.username= your email
+spring.mail.password= your pass
+
 
 # Other properties
 spring.mail.properties.mail.smtp.auth=true
